Changelog
---------

Version 1.0dev
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Allow BaseTemplate-derived classes (PageTemplate, PageTemplateFile, 
  et. al) to accept a ``doctype`` argument, which will override the
  doctype supplied by the source of the template if specified. [chrism]

- Corrected Genshi namespace (needs a trailing slash). [malthe]

- Language negotiation is left to the page template superclass, so we
  don't need to pass in a translation context anymore. [malthe]

- The ``ViewPageTemplateFile`` class now uses the module path of the
  calling class to get an absolute path to a relative filename passed
  to the constructor. [malthe]

- Added limited support for the XInclude ``include`` directive. The
  implemented subset corresponds to the Genshi implementation, except
  Match-templates, which are not made available to the calling
  template. [malthe]

- Use a global template registry for templates on the
  file-system. This makes it inexpensive to have multiple template
  class instances pointing to the same file. [malthe]

- Reimplemented the disk cache to correctly restore all template
  data. This implementation keeps a cache in a pickled format in a
  file next to the original template. [malthe]

- Refactored compilation classes to better separate concerns. [malthe]

- Genshi macros (py:def) are now available globally. [malthe]

- A syntax error is now raised when an interpolation expression is not
  exhausted, e.g. only a part of the string is a valid
  Python-expression. [malthe]

- System variables are now defined in a configuration class. [malthe]

- Improve performance of codegen by not repeatedly calling
  an expensive "flatten" function. [chrism]

- Remove ``safe_render`` implementation detail.  It hid information
  in tracebacks. [chrism]

- Fixed a few more UnicodeDecodeErrors (test contributed by Wiggy).
  In particular, never upcast to unicode during transformation, and
  utf-8 encode Unicode attribute keys and values in Assign expressions